# Python-for-HPC

./: .gitignore  README.md  environment.yml  python_for_hpc.pptx  python_for_hpc_linux64_conda_specs.txt  python_hpc.pptx  python_on_gpus.pptx
docs/: README.md  _config.yml  software_stack.md
source-code/: README.md
source-code/convolution/: README.md
source-code/convolution/cpp/: CMakeLists.txt  README.md
source-code/convolution/cpp/src/: CMakeLists.txt  benchmark_convolution.cpp  test_convolution.cpp
source-code/convolution/cpp/src/convolution/: convolution.cpp  convolution.h  matrices.cpp  matrices.h
source-code/convolution/python/: README.md  benchmark_convolution.py  convolution.py  test_convolution.py
source-code/cython/: README.md  cython.ipynb
source-code/cython/Classes/: .gitignore  Makefile  README.md  distances_cython.py  distances_internal.py  distances_python.py  driver.py  driver_pure.py  points.c  points.pyx  points_pure.py  points_python.py  setup.py
source-code/cython/Exceptions/: .gitignore  Makefile  README.md  average_pure.py  compute_average.py  setup.py
source-code/cython/HelloWorld/: .gitignore  CMakeLists.txt  Makefile  setup.py
source-code/cython/JuliaSet/: Makefile  setup.py
source-code/cython/Numpy/: .gitignore  Makefile  README.md  array_init.pyx  array_init_pure.py  array_sum.pyx  array_sum_pure.py  array_sums_prof.txt  compute_sums.py  init_test.ipynb  (+3 more)
source-code/dask/: README.md  create_csv_data.slurm  dask_distr_test.slurm  launch_scheduler.sh
source-code/file-formats/: .gitignore  README.md  pandas_io.ipynb
source-code/gpu/: README.md  cudac_linux64_conda_specs.txt  curand.ipynb  environment.yml  numba.ipynb  pycuda.ipynb  scikit_cuda.ipynb
source-code/hdf5/: README.md  h5py.ipynb  install.sh  read.py  test.py  write.pbs  write.py
source-code/interfacing-c-c++-fortran/Pybind11/Convolution/src/bindings/: CMakeLists.txt  convolve_bind.cpp  matrix_bind.cpp
source-code/ising/: .gitignore  README.md  averager.py  build.sh  ising_sim.py  runner.py
source-code/mpi4py/: .gitignore  README.md  analyze_mpifitness_data.py  file_trafficker.py  halo.py  mpi_io.py  mpifitness.py  pi_mpipool.py  plot_time_distribution.py  plot_timeline.py  run_pi_mpipool.sh  translate_bin.py
source-code/multiprocessing/: julia_shmem.py  julia_shmem.xlsx  pi_futures.py  shared_memory.py
source-code/numba/: README.md  computing_pi.ipynb  julia_set.ipynb  numba_parallel.ipynb
source-code/numpy-scipy/: README.md  create_h5.py  fancy_indexing.py  julia_set.ipynb  numpy_performance.ipynb  svd.py
source-code/performance/: README.md  number_puzzle.ipynb
source-code/profiling/: README.md  cellular_automata.py  microbenchmarking.ipynb
source-code/pypy/: README.md  environment.yml  julia_set.py
source-code/timings/: timer.py
(+81 files in other folders)
